version 0.23.5
==============================
- includes changes backported from mfaktc 0.24.0

bug fixes:
- added build flags to enable support for Blackwell devices by default in
  Makefile.win (thanks to yellowbeeblackbee)

build:
- enabled more compiler optimizations by default for a slight performance gain
  (thanks to NStorm)
- various improvements to GitHub Actions workflows (thanks to NStorm)
  - support for additional CUDA versions
  - removed dependency on deprecated windows-2019 images
  - code analysis with CodeQL
- improved visual appearance and clarity of release information (thanks to
  Danny Chia)

other changes:
- re-organized mfaktc.ini to be more user-friendly (thanks to James Heinrich)

version 0.23.4
==============================
- includes changes backported from mfaktc 0.24.0

bug fixes:
- fixed typos and formatting in output
- fix some compilation warnings
- the maximum number of threads per SM should no longer exceed the limit for
  certain architectures
- CUDA versions are now correctly detected

build:
- made the build helper script more robust

other changes:
- replaced deprecated CUDA function calls

version 0.23.3
==============================
bug fixes:
- fixed "random self-test offset" errors at startup; Blackwell devices are now
  correctly supported (thanks to Dmitry Bolshakov)

version 0.23.2
==============================
bug fixes:
- fixed a log file corruption issue introduced in 0.23.1

build:
- cleaned up makefiles
  - avoid hard-coded paths to specific CUDA installations
  - moved mfaktc.ini to 'src' so custom settings could be excluded from the
    repository
- continuous integration via GitHub Actions (thanks to NStorm)

version 0.23.1
==============================
bug fixes:
- on some Linux distributions, multiple factors per assignment weren't reported
  in the JSON output correctly
- fixed line ending bug

other changes:
- lowered default GPUSieveSize value to 256 to prevent issues on older GPUs

version 0.23.0